# crash-tracer

./: .gitignore  Cargo.toml
.cargo/: config.toml
crash-tracer/: Cargo.toml  build.rs
crash-tracer-common/: Cargo.toml
crash-tracer-common/src/: lib.rs
crash-tracer-ebpf/: Cargo.toml
crash-tracer-ebpf/src/: main.rs  vmlinux.rs
crash-tracer-ebpf/src/programs/: mod.rs  sched_process_exec.rs  sched_process_exit.rs  signal.rs  signal_deliver.rs
crash-tracer/src/: ebpf.rs  main.rs  report.rs
crash-tracer/src/db/: mod.rs  schema.rs
crash-tracer/src/db/query/: insert.rs
crash-tracer/src/event/: crash_source.rs  mod.rs  sched_exec_source.rs  signal_deliver_source.rs  unified_source.rs
crash-tracer/src/state/: map.rs
tests/: .gitignore  run_all.sh
tests/native/: abort.c  bus_error.c  divzero.c  illegal_instruction.c  segfault.c  stack_overflow.c  use_after_free.c
tests/node/: abort.js  diagnostic_report.js  fatal_error.js  segfault_native.js  stack_overflow.js  uncaught_exception.js  unhandled_rejection.js
tests/python/: abort_signal.py  faulthandler_crash.py  kill_self.py  segfault_ctypes.py  stack_overflow.py  unhandled_exception.py
