[workspace]
resolver = "2"
members = ["crash-tracer", "crash-tracer-common", "crash-tracer-ebpf"]

default-members = ["crash-tracer-common", "crash-tracer"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]

[profile.dev]
panic = "abort"
opt-level = 3

[profile.release]
panic = "abort"
lto = true
opt-level = 3

[profile.release.package.crash-tracer-ebpf]
debug = 2
codegen-units = 1
