[package]
name = "crash-tracer-ebpf"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "crash-tracer-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
crash-tracer-common = { path = "../crash-tracer-common" }
