

[package]
name = "crash-tracer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
clap = { version = "4.1", features = ["derive"] }
log = "0.4"
tokio = { version = "1.25", features = ["full"] }
env_logger = "0.11"
anyhow = "1"
crash-tracer-common = { path = "../crash-tracer-common" }
libc = "0.2"

[build-dependencies]
aya-build = { git = "https://github.com/aya-rs/aya", branch = "main" }
anyhow = "1"
cargo_metadata = "0.23.0"
crash-tracer-ebpf = { path = "../crash-tracer-ebpf" }

[[bin]]
name = "crash-tracer"
path = "src/main.rs"
